# megabot-rs

./: Cargo.toml  example_config.toml  justfile  megabot.service
kv/: Cargo.toml
kv/benches/: benchmark.rs
kv/src/: lib.rs
megabot/: Cargo.toml
megabot/src/: bot.rs  main.rs
megabot/src/commands/: go.rs  mod.rs
src/: bot.rs  config.rs  main.rs
src/commands/: codefmt.rs
