[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12"
serde = "1"
serde_json = "1"
rustc-hash = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false
